--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,14 +1,12 @@
 body {
-    background-color: burlywood;
-    /* background-image: url("../../assets/images/burgerimage.jpeg");
-    background-repeat: no-repeat;
-    background-position: center top; */
+    background-color:#ffd56f;
 }
 
 .main-title {
    color: red;
   
 }
+
 
 
 
