--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
                     {{#unless devoured }}
 
                 
-                    
+                    {{!-- Need to create space between text span and button --}}
 
                       <p class="bg-light mb-3 p-3 w-100 text-left">  <span class="px-4"> {{id}}. {{burger}}  </span>  
              
