--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
                 
                     {{!-- Need to create space between text span and button --}}
 
-                      <p class="bg-light mb-3 p-3 w-100 text-left">  <span class="px-4"> {{id}}. {{burger}}  </span>  
+                      <p class="bg-light mb-3 p-3 w-100 text-left">  <span class="pr-4"> {{id}}. {{burger}}  </span>  
              
               
                   <!-- id saves id in data-plan-->
